--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,8 @@
   height: 76px;
   padding: 0 15px;
   align-items: center;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.199);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: white;
 
   &__search {
     height: 40px;
