--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables";
+
 .filter {
   display: flex;
   flex-direction: column;
@@ -16,7 +18,7 @@
       width: 100%;
       font-size: 14px;
       font-weight: 600;
-      color: #a8b8ca;
+      color: $grey;
     }
   }
 
@@ -25,7 +27,7 @@
     gap: 8px;
     font-size: 18px;
     font-weight: 400;
-    color: #037bff;
+    color: $blue;
   }
 
   &__category {
