--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,9 @@
 .header {
   display: flex;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
+  max-width: 1470px;
+  margin: 0 auto;
   height: 76px;
   padding: 0 15px;
   align-items: center;
