--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,7 @@
 $grey: rgba(168, 184, 202, 1);
 $blue: #037bff;
+$badge-grey: rgba(231, 238, 249, 1);
+$badge-grey-text: rgba(136, 155, 177, 1);
+$badge-green: rgba(230, 245, 230, 1);
+$badge-green-text: rgba(32, 176, 46, 1);
+$orange: rgba(255, 153, 0, 1);
