--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -6,6 +6,8 @@
   height: 145px;
   background-color: white;
   border-radius: 16px;
+  line-height: 20px;
+  cursor: pointer;
 
   &__content {
     flex-grow: 1;
@@ -13,13 +15,67 @@
 
   &__description {
     position: relative;
-    span {
+    margin-top: 12px;
+    margin-left: 16px;
+    font-size: 14px;
+
+    &_title {
       color: $grey;
+      margin-bottom: 4px;
     }
+
+    &_head {
+      font-size: 16px;
+      margin-bottom: 4px;
+      line-height: 24px;
+    }
+
+    p {
+      font-weight: 500;
+    }
+
     &_badges {
       position: absolute;
-      top: 10px;
+      top: -5px;
       right: 5px;
+      :first-child {
+        margin-right: 5px;
+      }
+      &_limited {
+        background-color: $badge-grey;
+        color: $badge-grey-text;
+        font-weight: bold;
+        font-size: 10px;
+        border-radius: 12px;
+        padding: 5px 10px;
+      }
+
+      &_new {
+        background-color: $badge-green;
+        color: $badge-green-text;
+        font-weight: bold;
+        font-size: 10px;
+        border-radius: 12px;
+        padding: 5px 10px;
+      }
+    }
+  }
+
+  &__price {
+    display: flex;
+    margin-top: 25px;
+    margin-left: 16px;
+    column-gap: 8px;
+
+    p {
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    span {
+      font-weight: bold;
+      font-size: 12px;
+      color: $orange;
     }
   }
 }
