--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -1,6 +1,9 @@
 .products {
   display: flex;
+  flex-wrap: wrap;
   column-gap: 24px;
+  row-gap: 24px;
   margin-left: 40px;
   margin-right: 40px;
+  margin-bottom: 40px;
 }
