--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -2,12 +2,18 @@
 
 .productCard {
   display: flex;
-
   width: calc(100% / 3 - 16px);
   background-color: white;
   border-radius: 16px;
   line-height: 20px;
+  box-shadow: 0px 16px 24px 0px rgba(0, 0, 0, 0.04);
+  zoom: 1;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    transform: scale(1.05);
+  }
+
   @media (max-width: 1180px) {
     width: calc(100% / 2 - 12px);
   }
@@ -17,6 +23,11 @@
   @media (max-width: 432px) {
     min-width: 100%;
   }
+
+  img {
+    border-radius: 12px;
+  }
+
   &__content {
     flex-grow: 1;
   }
