--- a/src/components/UI/input/Input.module.scss
+++ b/src/components/UI/input/Input.module.scss
@@ -1,10 +1,11 @@
 .input_container {
   position: relative;
-
+  min-width: 100px;
+  margin-left: 10px;
+  margin-right: 24px;
   .input {
-    padding: 5px 15px;
-    padding-left: 40px;
-    padding-right: 80px;
+    padding: 5px 10px 5px 40px;
+    width: 100%;
     margin: 5px 0;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 8px;
