--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -21,7 +21,10 @@
     width: 100%;
   }
   @media (max-width: 432px) {
-    min-width: 100%;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 15px;
+    padding-right: 10px;
   }
 
   img {
