--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -2,6 +2,7 @@
 
 .productCard {
   display: flex;
+  position: relative;
   width: calc(100% / 3 - 16px);
   background-color: white;
   border-radius: 16px;
@@ -27,16 +28,48 @@
     padding-right: 10px;
   }
 
+  &__badges {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    :first-child {
+      margin-right: 5px;
+    }
+    &_limited {
+      background-color: $badge-grey;
+      color: $badge-grey-text;
+      font-weight: bold;
+      font-size: 10px;
+      border-radius: 12px;
+      padding: 5px 10px;
+    }
+
+    &_new {
+      background-color: $badge-green;
+      color: $badge-green-text;
+      font-weight: bold;
+      font-size: 10px;
+      border-radius: 12px;
+      padding: 5px 10px;
+    }
+  }
+
   img {
     border-radius: 12px;
   }
 
   &__content {
-    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    @media (max-width: 432px) {
+      width: 100%;
+    }
+    //flex-grow: 1;
   }
 
   &__description {
-    position: relative;
     margin-top: 12px;
     margin-left: 16px;
     font-size: 14px;
@@ -52,40 +85,19 @@
       line-height: 24px;
     }
 
-    p {
-      font-weight: 500;
-    }
-
-    &_badges {
-      position: absolute;
-      top: -5px;
-      right: 5px;
-      :first-child {
-        margin-right: 5px;
-      }
-      &_limited {
-        background-color: $badge-grey;
-        color: $badge-grey-text;
-        font-weight: bold;
-        font-size: 10px;
-        border-radius: 12px;
-        padding: 5px 10px;
-      }
-
-      &_new {
-        background-color: $badge-green;
-        color: $badge-green-text;
-        font-weight: bold;
-        font-size: 10px;
-        border-radius: 12px;
-        padding: 5px 10px;
+    &_body {
+      max-height: 60px;
+      overflow: hidden;
+      p {
+        font-weight: 500;
+        max-height: 40px;
       }
     }
   }
 
   &__price {
     display: flex;
-    margin-top: 25px;
+    //margin-top: 25px;
     margin-left: 16px;
     column-gap: 8px;
 
