--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -36,24 +36,10 @@
     flex-wrap: wrap;
     column-gap: 12px;
     row-gap: 16px;
-  }
-
-  &__status {
-    display: flex;
-    flex-direction: column;
-    row-gap: 15px;
-
-    &_container {
-      display: flex;
-      column-gap: 10px;
-      @media (max-width: 432px) {
-        flex-direction: column;
-      }
-    }
-
-    &_checkbox {
-      display: flex;
-      gap: 10px;
+    @media (max-width: 890px) {
+      display: block;
+      white-space: nowrap;
+      overflow-x: scroll;
     }
   }
 }
