--- a/src/components/UI/button/Button.module.scss
+++ b/src/components/UI/button/Button.module.scss
@@ -15,6 +15,11 @@
     background-color: #037bff;
     color: white;
   }
+
+  @media (max-width: 890px) {
+    margin-top: 15px;
+    margin-right: 10px;
+  }
 }
 
 .active {
