--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,6 +9,10 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   background-color: white;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   &__search {
     height: 40px;
   }
